--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -26,6 +26,10 @@
 
 
 [[constraint]]
+  name = "github.com/google/go-cmp"
+  version = "0.2.0"
+
+[[constraint]]
   name = "github.com/spf13/cobra"
   version = "0.0.3"
 
