--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,25 @@
 language: go
+sudo: required
 before_install:
   - go get -u github.com/golang/dep/...
+  - go get github.com/mitchellh/gox
   - dep ensure
 script:
   - go test ./...
+after_success:
+  - gox
+    -osarch "linux/386 linux/amd64 darwin/amd64"
+    -output="dist/{{.Dir}}_{{.OS}}_{{.Arch}}"
+  - "sudo chown ${USER}: dist/*"
+  - cd dist ; for f in *; do tar zcvf $f.tgz $f; done; cd -
+  - ls -l dist
+deploy:
+  provider: releases
+  api_key: "${GITHUB_API_KEY}"
+  file:
+    - dist/haproxy-gen_linux_386.tgz
+    - dist/haproxy-gen_linux_amd64.tgz
+    - dist/haproxy-gen_darwin_amd64.tgz
+  skip_cleanup: true
+  on:
+    tags: true
