--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,8 @@
 language: go
 before_install:
   - go get -u github.com/golang/dep/...
-  - go get github.com/mitchellh/gox
   - dep ensure
 script:
-  - go test ./...
+  - make test
 after_success:
-  - gox
-    -osarch "linux/386 linux/amd64 darwin/amd64"
-    -output="dist/{{.Dir}}_{{.OS}}_{{.Arch}}"
-  - cd dist ; for f in *; do tar zcvf $f.tgz $f; done; cd -
-  - ls -l dist
-deploy:
-  provider: releases
-  api_key: "${GITHUB_API_KEY}"
-  file:
-    - dist/haproxy-gen_linux_386.tgz
-    - dist/haproxy-gen_linux_amd64.tgz
-    - dist/haproxy-gen_darwin_amd64.tgz
-  skip_cleanup: true
-  on:
-    tags: true
+  - [[ -n "$TRAVIS_TAG" ]] && make release
