--- a/_examples/.gally.yml
+++ b/_examples/.gally.yml
@@ -1,4 +1,6 @@
 name: example
+ignore:
+  - not/relevant/for/tests/*
 scripts:
   build: docker build .
   test: echo hello world
@@ -7,3 +9,4 @@ strategies:
     branch: master
   previous-commit:
     only: master
+version: head -1 VERSION
