--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -8,10 +8,10 @@ builds:
     goarch:
       - amd64
     ldflags:
-      - -s -w -X "helpers.BuildDate={{ .Date }}"
-      - -s -w -X "helpers.Version={{ .Tag }}"
+      - -s -w -X helpers.BuildDate={{.Date}}
+      - -s -w -X helpers.Version={{.Tag}}
 archive:
-  name_template: "{{ .ProjectName }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}"
+  name_template: "{{.ProjectName}}_{{.Version}}_{{.Os}}_{{.Arch}}"
   format: tar.gz
   replacements:
     amd64: 64-bit
