--- a/_examples/.gally.yml
+++ b/_examples/.gally.yml
@@ -10,5 +10,5 @@ strategies:
     branch: master
   previous-commit:
     only: master
-version: head -1 VERSION
+version: head -1 _examples/VERSION
 build: echo go building!
