--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -8,8 +8,7 @@ builds:
     goarch:
       - amd64
     ldflags:
-      - -s -w -X helpers.BuildDate={{.Date}}
-      - -s -w -X helpers.Version={{.Tag}}
+      - -s -w -X helpers.BuildDate={{.Date}} -X helpers.Version={{.Tag}}
 archive:
   name_template: "{{.ProjectName}}_{{.Version}}_{{.Os}}_{{.Arch}}"
   format: tar.gz
