--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,8 @@ jobs:
       - run:
           name: Unit Testing
           command: |
+            pwd
+            echo $GOROOT $GO111MODULE $GOPATH
             go test -race ./...
       - run: 
           name: Release
