--- a/examples/tag/.gally.yml
+++ b/examples/tag/.gally.yml
@@ -4,7 +4,7 @@ ignore:
   - not/relevant/for/tests/*
 scripts:
   build: docker build .
-  test: echo hello world
+  test: echo hello tag
 strategies:
   compare-to:
     branch: master
