--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -13,5 +13,4 @@ archive:
   name_template: "{{.ProjectName}}_{{.Version}}_{{.Os}}_{{.Arch}}"
   format: tar.gz
   replacements:
-    amd64: 64-bit
-    darwin: macOS
+    amd64: x86_64
