--- a/examples/tag/.gally.yml
+++ b/examples/tag/.gally.yml
@@ -13,7 +13,7 @@ strategies:
 version: head -1 tag/VERSION
 build: echo go building tag!
 depends_on:
-  - /app/project1
+  - ../../project
 env:
   - name: NAMESPACE
     value: "staging"
