--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 jobs:
   test:
     docker:
-      - image: circleci/golang:1.16
+      - image: circleci/golang
     steps:
       - checkout
       - run:
@@ -11,7 +11,7 @@ jobs:
             go test -race ./...
   release:
     docker:
-      - image: circleci/golang:1.16
+      - image: circleci/golang
     steps:
       - checkout
       - run:
